--- a/Asteroids/Asteroids.fsproj
+++ b/Asteroids/Asteroids.fsproj
@@ -56,8 +56,10 @@
   <ItemGroup>
     <Compile Include="Geometry.fs" />
     <Compile Include="Domain.fs" />
+    <Compile Include="ShipChange.fs" />
     <Compile Include="WindowHandlers.fs" />
     <Compile Include="Render.fs" />
+    <Compile Include="Keyboard.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
