--- a/Asteroids/Asteroids.fsproj
+++ b/Asteroids/Asteroids.fsproj
@@ -54,11 +54,12 @@
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
+    <Compile Include="WindowHandlers.fs" />
     <Compile Include="Physics.fs" />
     <Compile Include="Domain.fs" />
-    <Compile Include="ShipChange.fs" />
-    <Compile Include="WindowHandlers.fs" />
     <Compile Include="Render.fs" />
+    <Compile Include="ShipChange.fs" />
+    <Compile Include="StateChange.fs" />
     <Compile Include="Keyboard.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
