--- a/Asteroids/Asteroids.fsproj
+++ b/Asteroids/Asteroids.fsproj
@@ -56,6 +56,10 @@
   <ItemGroup>
     <Compile Include="WindowHandlers.fs" />
     <Compile Include="Physics.fs" />
+    <Compile Include="Random.fs" />
+    <Compile Include="PlayArea.fs" />
+    <Compile Include="Polygon.fs" />
+    <Compile Include="Asteroid.fs" />
     <Compile Include="Domain.fs" />
     <Compile Include="Render.fs" />
     <Compile Include="ShipChange.fs" />
